fixed overflow for reviews

--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -198,3 +198,8 @@
 #rating-information {
     display: flex;
 }
+
+.the-review {
+    width: 28rem;
+    overflow-wrap: break-word;
+}
